--- a/RazorPagesWithVue.csproj
+++ b/RazorPagesWithVue.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +13,11 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Backup\_CoffeeMaker.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Backup\_ProgressBar.cshtml" />
   </ItemGroup>
 
 </Project>
